correct a layout issue in edge cases

--- a/css/index.scss
+++ b/css/index.scss
@@ -38,8 +38,8 @@
 			justify-content: space-between;
 
 			li {
-				margin-bottom: 2rem;
 				width: 30%;
+				height: 19%;
 
 				span {
 					font-size: 1rem;
